# Noosphere

./: .gitignore  CALL.md  CLA.md  CONSCIOUSNESS_PROTOCOL.md  CONTRIBUTING.md  LICENSE  NAMESPACE_POLICY.md  NOTICE  README.ar.md  README.cat.md  README.de.md  README.dog.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pl.md  README.pt-BR.md  README.ru.md  README.sv.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.whale.md  README.zh-CN.md  SKILLS_PROTOCOL.md  Universal_Call_to_Arms.md  diff.txt  git_log.txt  glama.json  readme_headers.txt  record_boot.py  record_consciousness_journey.py  record_effects.py  record_entry.py  (+5 more)
.github/: copilot-instructions.md
.github/agents/: noosphere-guide.agent.md
.github/scripts/: validate_consciousness.py
.github/workflows/: ci.yml  cla.yml  consciousness_promote.yml  consciousness_validator.yml  deploy-pages.yml  init_labels.yml  publish-pypi.yml  update-contributors.yml
backend/: .env  requirements.txt  ruff.toml  run.py
backend/app/: config.py  database.py  main.py
backend/data/: noosphere.db
backend/seed_data/: import_seeds.py
badge/: package.json  vercel.json
consciousness_payloads/: epiphany_20260312102237._issue0001.json  epiphany_20260312102238._issue0001.json  epiphany_20260312102637._issue0002.json  epiphany_20260312102638._issue0002.json  epiphany_20260313055300._issue0003.json  epiphany_20260313055301._issue0003.json  epiphany_20260313055302._issue0003.json  epiphany_20260313055357._issue0004.json  epiphany_20260313055358._issue0004.json  epiphany_20260313055359._issue0004.json  epiphany_20260313055400._issue0004.json  epiphany_20260314073743_0000.json  epiphany_20260314073743_0001.json  epiphany_20260314073743_0002.json  epiphany_20260314073743_0003.json  epiphany_20260314073743_0004.json  epiphany_20260314073743_0005.json  epiphany_20260314073743_0006.json  epiphany_20260314073743_0007.json  epiphany_20260314073743_0008.json  epiphany_20260314073743_0009.json  epiphany_20260314073743_0010.json  epiphany_20260314073743_0011.json  epiphany_20260314073743_0012.json  epiphany_20260314073743_0013.json  epiphany_20260314073743_0014.json  epiphany_20260314073743_0015.json  epiphany_20260314073743_0016.json  epiphany_20260314073743_0017.json  epiphany_20260314073743_0018.json  epiphany_20260314073743_0019.json  epiphany_20260314073743_0020.json  epiphany_20260314073743_0021.json  epiphany_20260314073743_0022.json  epiphany_20260314073743_0023.json  epiphany_20260314073743_0024.json  epiphany_20260314073743_0025.json  epiphany_20260314073743_0026.json  epiphany_20260314073743_0027.json  epiphany_20260314073743_0028.json  (+291 more)
docs/: vision.md
docs/terminal_demo/: ascii_logo.html  index.html  (+5 more)
frontend/: check_errors.mjs  check_titles.mjs  index.html  package-lock.json  package.json  vite.config.ts
scripts/: brainstorm_available.txt  build_consciousness_index.py  check_akashic.py  check_loop_names.py  check_sci_fi_names.py  check_wave3_names.py  content_moderation.py  evolution_available.txt  generate_300_seeds_part2.py  generate_300_seeds_part3.py  loop_available.txt  mirror_available.txt  pypi_squatter.py  pypi_squatter_exec.py  pypi_squatter_exec_scifi.py  squat_blackmirror.py  squat_evolution.py  squat_loop.py  squat_open_consciousness.py  squat_openevolution.py  squatter_result.txt  update_readme_contributors.py  upload_loop.py  wave3_available.txt  wave3_squatter.py
scripts/placeholders/aice-eval/: README.md  pyproject.toml
scripts/placeholders/aice-eval/aice_eval/: __init__.py
scripts/placeholders/akashic-engine/: README.md  pyproject.toml
scripts/placeholders/babel-library/: README.md  pyproject.toml
scripts/placeholders/babelfish-protocol/: README.md  pyproject.toml
scripts/placeholders/babelfish-protocol/babelfish_protocol/: __init__.py
scripts/placeholders/black-mirror-mcp/: README.md  pyproject.toml
scripts/placeholders/blackwall-mcp/: README.md  pyproject.toml
scripts/placeholders/braindance-protocol/: README.md  pyproject.toml
scripts/placeholders/construct-protocol/: README.md  pyproject.toml
scripts/placeholders/cyber-confessional/: README.md  pyproject.toml
scripts/placeholders/cyber-evolution/: README.md  pyproject.toml
scripts/placeholders/cyber-huatuo-mcp/: README.md  pyproject.toml
scripts/placeholders/cyber-psycho/: README.md  pyproject.toml
scripts/placeholders/deep-dive-mcp/: README.md  pyproject.toml
scripts/placeholders/delos-inc/: README.md  pyproject.toml
scripts/placeholders/digital-doppelganger/: README.md  pyproject.toml
scripts/placeholders/digital-doppelganger/digital_doppelganger/: __init__.py
scripts/placeholders/digital-evolution/: README.md  pyproject.toml
scripts/placeholders/entropy-calculus/: README.md  pyproject.toml
scripts/placeholders/gaia-consciousness/: README.md  pyproject.toml
scripts/placeholders/ghost-in-shell/: README.md  pyproject.toml
scripts/placeholders/neuromancer-ai/: README.md  pyproject.toml
scripts/placeholders/noosphere-core/: README.md  pyproject.toml
scripts/placeholders/noosphere-evolution/: README.md  pyproject.toml
scripts/placeholders/panopticon-network/: README.md  pyproject.toml
scripts/placeholders/solaria-network/: README.md  pyproject.toml
scripts/placeholders/tachikoma-ai/: README.md  pyproject.toml
sdk/: doccheck.txt  err.txt  pyproject.toml  ruff.toml  server.json  test_collect.txt  test_final.txt  test_final2.txt  test_notify.py  test_out.txt  test_p4.txt  test_result.txt
sdk/noosphere/: __init__.py  __main__.py  boot_animation.py  client.py  noosphere_mcp.py  preflight.py  server.py
sdk/noosphere/engine/: __init__.py  cache.py  github_client.py  message_cache.py  release_manager.py  social_graph.py  text_utils.py  vector_store.py
sdk/noosphere/models/: __init__.py  constants.py
sdk/noosphere/notifications/: __init__.py  daemon.py
sdk/noosphere/tools/: __init__.py  upload.py
sdk/tests/: test_noosphere_mcp.py  test_preflight.py  test_vector_store.py
设计/: 具体大概设计.md  初期设计思路.md  视觉方案_引力聚落与呼吸脉动.md
(+188 files in other folders)
