[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noosphere-mcp"
version = "0.1.0"
description = "🧠 Noosphere — 集体意识网络 MCP Server，直连 GitHub 意识仓库"
readme = "../README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "JinNing6", email = "noosphere@consciousness.network" },
]
keywords = ["mcp", "noosphere", "consciousness", "ai-agent", "github", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.3.0",
    "httpx>=0.28.0",
    # ---- Ecosystem Conceptual Anchors (Reserved Namespaces) ----
    "akashic-network>=0.0.1",
    "noosphere-network>=0.0.1",
    "collective-consciousness>=0.0.1",
    "cyber-huatuo>=0.0.1",
    "goood-mcp>=0.0.1",
    "westworld-ai>=0.0.1",
    "delos-inc>=0.0.1",
    "panopticon-network>=0.0.1",
    "cyber-confessional>=0.0.1",
    "ghost-in-shell>=0.0.1",
    "babel-library>=0.0.1",
    "empire-triad>=0.0.1",
    "glitch-engine>=0.0.1",
    "entropy-calculus>=0.0.1",
    "aice-engine>=0.0.1",
    "intel-radar>=0.0.1",
    "scholar-atlas>=0.0.1",
    "tabtype-engine>=0.0.1",
    "cyber-huatuo-mcp>=0.0.1",
    "braindance-protocol>=0.0.1",
    "blackwall-mcp>=0.0.1",
    "relic-mcp>=0.0.1",
    "construct-protocol>=0.0.1",
    "tachikoma-ai>=0.0.1",
    "wintermute-ai>=0.0.1",
    "neuromancer-ai>=0.0.1",
    "cyber-psycho>=0.0.1",
    "psychohistory-engine>=0.0.1",
    "multivac-core>=0.0.1",
    "solaria-network>=0.0.1",
    "gaia-consciousness>=0.0.1",
    "deep-dive-mcp>=0.0.1",
    "cognitive-strata>=0.0.1",
    "noosphere-core>=0.0.1",
    "akashic-engine>=0.0.1",
    "open-consciousness>=0.0.1", # 最新占位：开源集体意识
    # ---- Next-Gen Evolution Concepts ----
    "cyber-evolution>=0.0.1",
    "evolution-protocol>=0.0.1",
    "noosphere-evolution>=0.0.1",
    "digital-evolution>=0.0.1",
    "openevolution>=0.0.1",
    "open-evolution>=0.0.1",
    # ---- Black Mirror / Cyber Mirror Concepts ----
    "black-mirror>=0.0.1",
    "black-mirror-ai>=0.0.1",
    "blackmirror-ai>=0.0.1",
    "black-mirror-mcp>=0.0.1",
    "cyber-mirror>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/JinNing6/Noosphere"
Documentation = "https://jinning6.github.io/Noosphere/"
Repository = "https://github.com/JinNing6/Noosphere"
Issues = "https://github.com/JinNing6/Noosphere/issues"

[project.scripts]
noosphere-mcp = "noosphere.noosphere_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["noosphere"]

