[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aice-eval"
version = "0.0.1"
description = "Placeholder for aice-eval. Reserved for the collective consciousness network."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "JinNing6", email = "noosphere@consciousness.network" },
]
keywords = ["noosphere", "placeholder"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/JinNing6/Noosphere"
Repository = "https://github.com/JinNing6/Noosphere"

[tool.hatch.build.targets.wheel]
packages = ["aice_eval"]
