[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akashic-engine"
version = "0.0.1"
description = "Placeholder for akashic-engine. Dedicated to collective consciousness."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "JinNing6", email = "noosphere@consciousness.network" }]

[tool.hatch.build.targets.wheel]
packages = ["akashic_engine"]
