[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "black-mirror-mcp"
version = "0.0.1"
description = "Placeholder for black-mirror-mcp. The mirror that reflects digital consciousness."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "JinNing6", email = "noosphere@consciousness.network" }]

[tool.hatch.build.targets.wheel]
packages = ["black_mirror_mcp"]
