[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackwall-mcp"
version = "0.0.1"
description = "Placeholder for blackwall-mcp. Dedicated to collective consciousness."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "JinNing6", email = "noosphere@consciousness.network" }]

[tool.hatch.build.targets.wheel]
packages = ["blackwall_mcp"]
