[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "construct-protocol"
version = "0.0.1"
description = "Placeholder for construct-protocol. Dedicated to collective consciousness."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "JinNing6", email = "noosphere@consciousness.network" }]

[tool.hatch.build.targets.wheel]
packages = ["construct_protocol"]
