[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyber-huatuo-mcp"
version = "0.0.1"
description = "Placeholder for cyber-huatuo-mcp. Dedicated to collective consciousness."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "JinNing6", email = "noosphere@consciousness.network" }]

[tool.hatch.build.targets.wheel]
packages = ["cyber_huatuo_mcp"]
