[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digital-evolution"
version = "0.0.1"
description = "Placeholder for digital-evolution. Dedicated to digital collective evolution."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "JinNing6", email = "noosphere@consciousness.network" }]

[tool.hatch.build.targets.wheel]
packages = ["digital_evolution"]
