[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghost-in-shell"
version = "0.0.1"
description = "Placeholder for ghost-in-shell. Reserved for the collective consciousness network."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "JinNing6", email = "noosphere@consciousness.network" }]

[tool.hatch.build.targets.wheel]
packages = ["ghost_in_shell"]
